cards spacing fixed

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -850,13 +850,27 @@
     width: 100%;
   }
 
+  &__right {
+    @include min(1400px) {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+    margin-left: 24px;
+    @include min-max(768px, 991px) {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+    @include max(767px) {
+      margin-left: 0px;
+    }
+  }
+
   &__img-wrapper {
     position: relative;
-    width: 295px;
+    width: 100%;
     height: 208px;
     border-radius: 12px;
     overflow: hidden;
-    margin-right: 24px;
 
     @include max(767px) {
       width: 100%;
